Archive2/7a/21c6491d2c1371/output
main.cpp:9:27: error: unknown type name 'string'; did you mean 'std::string'?
    Student(int idnumber, string fname, string lname);
                          ^~~~~~
                          std::string
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stringfwd.h:62:33: note: 'std::string' declared here
  typedef basic_string<char>    string;   
                                ^
main.cpp:9:41: error: unknown type name 'string'; did you mean 'std::string'?
    Student(int idnumber, string fname, string lname);
                                        ^~~~~~
                                        std::string
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stringfwd.h:62:33: note: 'std::string' declared here
  typedef basic_string<char>    string;   
                                ^
2 errors generated.
