Archive2/7a/21c6491d2c1371/main.cpp
#include <iostream>
#include <cstdlib>
#include <string>


class Student
{
public:
    Student(int idnumber, string fname, string lname);
};